# sentimentor

./: .gitignore  pyproject.toml
app/: main.py  schemas.py  sentiment_classifier.py  tools.py
model/: sentiment_analysis.ipynb  sentiment_cgb.pkl
tests/: test_sentiment_classifier.py  test_sentimentor.py
