[tool.poetry]
name = "sentimentor"
version = "0.1.0"
description = ""
authors = ["neperiana <ikbenmila@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.17.0"
flair = "^0.10"
vader = "^0.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
